--- a/index.html
+++ b/index.html
@@ -1,45 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>HOODIES | SUBMISSION FORM</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-</head>
-<body>
-    
-   <div class="wrapper">
-    <form action="">
-        <h1>Register</h1>
-        <div class="input-box">
-            <input type="text" name="name" placeholder="Full Name" required>
-            <i class='bx bxs-user'></i>
-        </div>
-        <div class="size">
-            <span class="sp" >Section</span><br>
-            <input type="radio" name="section" value="A"><label >A</label>
-            <input type="radio" name="section" value="B"><label >B</label>
-            <input type="radio" name="section" value="C"><label >C</label> 
-            <input type="radio" name="section" value="D"><label >D</label>
-        </div>
-        <div class="size">
-            <span class="sp" >Size <i class='bx bxs-t-shirt'></i></span><br>
-            <div class="subsize">
-                <input type="radio" name="size" value="A"><label >S</label>
-                <input type="radio" name="size" value="B"><label >M</label>
-                <input type="radio" name="size" value="C"><label >L</label>
-            </div>
-             
-        </div>
-        <img src="WhatsApp Image 2023-11-23 at 9.03.58 PM.jpeg" alt="" width="100px" height="100" style="object-fit: cover; border-radius: 15px; margin-left: 50%;">
-        <div class="input-box">
-            <input type="text" name="trans" placeholder="Transaction id" required>
-            <i class='bx bxs-key'></i>
-        </div>
-        <input type="submit" name="submit" class="btn">
-    </form>
-   </div>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Hoodie</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <script src="main.js"></script>
+  </head>
+  <body>
+    faf
+  </body>
 </html>
