--- a/index.html
+++ b/index.html
@@ -9,6 +9,29 @@
     <script src="main.js"></script>
   </head>
   <body>
-    faf
+    <div class="container">
+      <form method="post" action="" name="hoodie-form">
+        <h4>Register Your Hoodie</h4>
+        <input type="text" name="naam" placeholder="Full Name" />
+        <div class="size">
+          <label for="Size">Choose size</label>
+          <select name="size" id="size ">
+            <option value="S">S</option>
+            <option value="M">M</option>
+            <option value="L">L</option>
+          </select>
+          <br />
+          <label for="class">Section</label>
+          <select name="class" id="class">
+            <option value="A">A</option>
+            <option value="B">B</option>
+            <option value="C">C</option>
+            <option value="D">D</option>
+          </select>
+          <br />
+          <input type="submit" value="Submit" id="submit" />
+        </div>
+      </form>
+    </div>
   </body>
 </html>
